# Assignment3

./: Courses.txt  Database.java  dockDockBuildParams.json
Client/: makefile
Client/include/: ConnectionReader.h  KeyboardReader.h
Client/src/: CMakeLists.txt  CRSClient.cpp  Client.cpp  Client2Thread.cpp  ConnectionReader.cpp  KeyBoardReader.cpp  KeyboardReader.cpp  connectionHandler.cpp  echoClient.cpp
Server/src/main/java/bgu/spl/net/api/: CRSMessageEncoderDecoder.java  CRSMessagingProtocol.java  CRSMessagingProtocolInterface.java  Message.java
Server/src/main/java/bgu/spl/net/api/Messages/: Message.java
Server/src/main/java/bgu/spl/net/impl/BGRSServer/: CRSServer.java  ReactorMain.java
Server/src/main/java/bgu/spl/net/impl/BGRSServer/Tester/: BGRSclient  BGRsclient  CommandProcessor.java  Tests.java
Server/src/main/java/bgu/spl/net/srv/: CRSServer.java  Course.java  Database.java  UserType.java
spl-net/src/main/java/bgu/spl/net/srv/: Database.java
